--- a/lab/phaser/000_making_your_first_phaser3_game/part5.html
+++ b/lab/phaser/000_making_your_first_phaser3_game/part5.html
@@ -60,14 +60,23 @@
         // 월드의 경계에 부딪히도록 설정했는데, 기본적으로는 빠져나갈 수 있도록 되어 있음
         player.setCollideWorldBounds(true);
 
+        // this.anims는 Animation Manager
+        // 전역 시스템으로, 이 매니저에 생성된 애니메이션들은 모든 Scene에서 사용할 수 있음
+        // 애니메이션을 가져다 쓰는 개체들은 자체적으로 타임라인을 관리하기 때문에,
+        // 애니메이션을 한 번 정의하고 게임 오브젝트들이 가져다 쓸 수 있음
+
         // 애니메이션을 추가함
         this.anims.create({
           key: "left",
+          // start, end : 이미지에서 프레임의 처음과 끝 위치 (0번 이미지부터 3번 이미지까지 사용)
           frames: this.anims.generateFrameNumbers("dude", { start: 0, end: 3 }),
+          // 초당 프레임 수
           frameRate: 10,
+          // 애니메이션을 반복할 횟수 (-1로 설정하면 무한 반복)
           repeat: -1,
         });
 
+        // 제자리에서 돌 때(방향 전환) 4번째 이미지 사용
         this.anims.create({
           key: "turn",
           frames: [{ key: "dude", frame: 4 }],
