--- a/fe/index.html
+++ b/fe/index.html
@@ -14,6 +14,10 @@
                 font-weight: 700;
                 font-style: normal;
             }
+            @font-face {
+                font-family: "m6x11";
+                src: url("/font/m6x11.ttf") format("truetype");
+            }
         </style>
     </head>
 
@@ -22,3 +26,4 @@
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
+
