feat: 마우스 클릭 시 효과음 재생

--- a/fe/index.html
+++ b/fe/index.html
@@ -24,6 +24,14 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
+        <script>
+            function onMouseClick() {
+                const fileUrl = "/sounds/effect/universal/Modern1.mp3";
+                const audio = new Audio(fileUrl);
+                audio.play();
+            }
+            document.addEventListener("click", onMouseClick);
+        </script>
     </body>
 </html>
 
