feat: 플레이어 닉네임 폰트 + 위치 조정

--- a/fe/index.html
+++ b/fe/index.html
@@ -18,6 +18,10 @@
                 font-family: "m6x11";
                 src: url("/font/m6x11.ttf") format("truetype");
             }
+            @font-face {
+                font-family: "Galmuri11";
+                src: url("/font/Galmuri11.woff2") format("woff2");
+            }
         </style>
     </head>
 
